5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1752_3097.log
== TEST (2019-05-16 16:18:31) 
-- CODE:
p = int(input("Digite a posicao de entrada do joquei: "))

c = 0
soma = 0
while (p > 0):
	if (p == 1):
		soma = soma + 25
	elif (p == 2):
		soma = soma + 18
	elife (p == 3):
		soma = soma + 12 
	elife (p >= 4):
		soma = soma + (14 - p)
	c = c + 1
print(soma)	
-- ERROR:
File "XXXX", line 10
    elife (p == 3):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:18:40) 
-- CODE:
p = int(input("Digite a posicao de entrada do joquei: "))

c = 0
soma = 0
while (p > 0):
	if (p == 1):
		soma = soma + 25
	elif (p == 2):
		soma = soma + 18
	elif (p == 3):
		soma = soma + 12 
	elif (p >= 4):
		soma = soma + (14 - p)
	c = c + 1
print(soma)	
-- ERROR:
File "XXXX", line 10
    elife (p == 3):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:20:25) 
-- CODE:
p = int(input("Digite a posicao de chegada do joquei: "))

c = 0
soma = 0
while (p > 0):
	if (p == 1):
		soma = soma + 25
	elif (p == 2):
		soma = soma + 18
	elif (p == 3):
		soma = soma + 12 
	elif (p >= 4):
		soma = soma + (14 - p)
	c = c + 1
	p = int(input("Digite a posicao de chegada do joquei: "))
print(soma)	
-- OUTPUT:
104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:20:54) 
-- CODE:
p = int(input("Digite a posicao de chegada do joquei: "))

c = 0
soma = 0
while (p != 0):
	if (p == 1):
		soma = soma + 25
	elif (p == 2):
		soma = soma + 18
	elif (p == 3):
		soma = soma + 12 
	elif (p >= 4):
		soma = soma + (14 - p)
	c = c + 1
	p = int(input("Digite a posicao de chegada do joquei: "))
print(soma)	
-- OUTPUT:
104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:05) 
-- CODE:
p = int(input("Digite a posicao de chegada do joquei: "))

c = 0
soma = 0
while (p != 0):
	if (p == 1):
		soma = soma + 25
	elif (p == 2):
		soma = soma + 18
	elif (p == 3):
		soma = soma + 12 
	elif (p >= 4):
		soma = soma + (14 - p)
	c = c + 1
	p = int(input("Digite a posicao de chegada do joquei: "))
print(soma)	
-- OUTPUT:
104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:36) 
-- CODE:
p = int(input("Digite a posicao de chegada do joquei: "))

c = 0
soma = 0
while (p != 0):
	if (p == 1):
		soma = soma + 25
	elif (p == 2):
		soma = soma + 18
	elif (p == 3):
		soma = soma + 12 
	elif (p >= 4):
		soma = soma + (14 - p)
	c = c + 1
	p = int(input("Digite a posicao de chegada do joquei: "))
print(soma)	
-- OUTPUT:
104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:21:53) 
-- CODE:
p = int(input("Digite a posicao de chegada do joquei: "))

c = 0
soma = 0
while (p != 0):
	if (p == 1):
		soma = soma + 25
	elif (p == 2):
		soma = soma + 18
	elif (p == 3):
		soma = soma + 12 
	elif (p >= 4):
		soma = soma + (14 - p)
	c = c + 1
	p = int(input("Digite a posicao de chegada do joquei: "))
print(soma)	
-- EXECUTION TIME:
0.166665
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
104
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
165
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
-45
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:22:06) 
-- CODE:
p = int(input("Digite a posicao de chegada do joquei: "))

c = 0
soma = 0
while (p != 0):
	if (p == 1):
		soma = soma + 25
	elif (p == 2):
		soma = soma + 18
	elif (p == 3):
		soma = soma + 12 
	elif (p >= 4):
		soma = soma + (14 - p)
	c = c + 1
	p = int(input("Digite a posicao de chegada do joquei: "))
print(soma)	
-- OUTPUT:
104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:22:47) 
-- CODE:
p = int(input("Digite a posicao de chegada do joquei: "))

c = 0
soma = 0
while (p != 0):
	if (p == 1):
		soma = soma + 25
	elif (p == 2):
		soma = soma + 18
	elif (p == 3):
		soma = soma + 12 
	elif (4 <= p <= 10):
		soma = soma + (14 - p)
	c = c + 1
	p = int(input("Digite a posicao de chegada do joquei: "))
print(soma)	
-- OUTPUT:
104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:23:06) 
-- CODE:
p = int(input("Digite a posicao de chegada do joquei: "))

c = 0
soma = 0
while (p != 0):
	if (p == 1):
		soma = soma + 25
	elif (p == 2):
		soma = soma + 18
	elif (p == 3):
		soma = soma + 12 
	elif (4 <= p <= 10):
		soma = soma + (14 - p)
	c = c + 1
	p = int(input("Digite a posicao de chegada do joquei: "))
print(soma)	
-- EXECUTION TIME:
0.143889
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
104
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
165
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
